chore: refactor languages

--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -5726,18 +5726,10 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_ImportDataSuccess" = "Database imported successfully.";
 "ayu_ImportDataFailure" = "Failed to import database.";
 "ayu_RegexFilters" = "Message Filters";
-"ayu_RegexFiltersAmount_zero" = "%1$d filters";
-"ayu_RegexFiltersAmount_one" = "1 filter";
-"ayu_RegexFiltersAmount_two" = "%1$d filters";
-"ayu_RegexFiltersAmount_few" = "%1$d filters";
-"ayu_RegexFiltersAmount_many" = "%1$d filters";
-"ayu_RegexFiltersAmount_other" = "%1$d filters";
-"ayu_RegexFiltersExcludedAmount_zero" = "%1$d excluded";
-"ayu_RegexFiltersExcludedAmount_one" = "1 excluded";
-"ayu_RegexFiltersExcludedAmount_two" = "%1$d excluded";
-"ayu_RegexFiltersExcludedAmount_few" = "%1$d excluded";
-"ayu_RegexFiltersExcludedAmount_many" = "%1$d excluded";
-"ayu_RegexFiltersExcludedAmount_other" = "%1$d excluded";
+"ayu_RegexFiltersAmount#one" = "1 filter";
+"ayu_RegexFiltersAmount#other" = "{count} filters";
+"ayu_RegexFiltersExcludedAmount#one" = "1 excluded";
+"ayu_RegexFiltersExcludedAmount#other" = "{count} excluded";
 "ayu_RegexFiltersHeader" = "Filters";
 "ayu_RegexFiltersShared" = "Shared Filters";
 "ayu_RegexFiltersExcluded" = "Excluded Filters";
@@ -5772,42 +5764,18 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_FiltersToastFailNoChanges" = "Filters are the same as current.";
 "ayu_FiltersToastSuccess" = "Filters successfully imported.";
 "ayu_FiltersSheetTitle" = "Apply filter changes?";
-"ayu_FiltersSheetNewFilters_zero" = "**%1$d** new filters";
-"ayu_FiltersSheetNewFilters_one" = "**1** new filter";
-"ayu_FiltersSheetNewFilters_two" = "**%1$d** new filters";
-"ayu_FiltersSheetNewFilters_few" = "**%1$d** new filters";
-"ayu_FiltersSheetNewFilters_many" = "**%1$d** new filters";
-"ayu_FiltersSheetNewFilters_other" = "**%1$d** new filters";
-"ayu_FiltersSheetRemovedFilters_zero" = "**%1$d** removed filters";
-"ayu_FiltersSheetRemovedFilters_one" = "**1** removed filter";
-"ayu_FiltersSheetRemovedFilters_two" = "**%1$d** removed filters";
-"ayu_FiltersSheetRemovedFilters_few" = "**%1$d** removed filters";
-"ayu_FiltersSheetRemovedFilters_many" = "**%1$d** removed filters";
-"ayu_FiltersSheetRemovedFilters_other" = "**%1$d** removed filters";
-"ayu_FiltersSheetUpdatedFilters_zero" = "**%1$d** updated filters";
-"ayu_FiltersSheetUpdatedFilters_one" = "**1** updated filter";
-"ayu_FiltersSheetUpdatedFilters_two" = "**%1$d** updated filters";
-"ayu_FiltersSheetUpdatedFilters_few" = "**%1$d** updated filters";
-"ayu_FiltersSheetUpdatedFilters_many" = "**%1$d** updated filters";
-"ayu_FiltersSheetUpdatedFilters_other" = "**%1$d** updated filters";
-"ayu_FiltersSheetNewExclusions_zero" = "**%1$d** new exclusions";
-"ayu_FiltersSheetNewExclusions_one" = "**1** new exclusion";
-"ayu_FiltersSheetNewExclusions_two" = "**%1$d** new exclusions";
-"ayu_FiltersSheetNewExclusions_few" = "**%1$d** new exclusions";
-"ayu_FiltersSheetNewExclusions_many" = "**%1$d** new exclusions";
-"ayu_FiltersSheetNewExclusions_other" = "**%1$d** new exclusions";
-"ayu_FiltersSheetRemovedExclusions_zero" = "**%1$d** removed exclusions";
-"ayu_FiltersSheetRemovedExclusions_one" = "**1** removed exclusion";
-"ayu_FiltersSheetRemovedExclusions_two" = "**%1$d** removed exclusions";
-"ayu_FiltersSheetRemovedExclusions_few" = "**%1$d** removed exclusions";
-"ayu_FiltersSheetRemovedExclusions_many" = "**%1$d** removed exclusions";
-"ayu_FiltersSheetRemovedExclusions_other" = "**%1$d** removed exclusions";
-"ayu_FiltersSheetDialogsToResolve_zero" = "**%1$d** dialogs to resolve";
-"ayu_FiltersSheetDialogsToResolve_one" = "**1** dialog to resolve";
-"ayu_FiltersSheetDialogsToResolve_two" = "**%1$d** dialogs to resolve";
-"ayu_FiltersSheetDialogsToResolve_few" = "**%1$d** dialogs to resolve";
-"ayu_FiltersSheetDialogsToResolve_many" = "**%1$d** dialogs to resolve";
-"ayu_FiltersSheetDialogsToResolve_other" = "**%1$d** dialogs to resolve";
+"ayu_FiltersSheetNewFilters#one" = "**1** new filter";
+"ayu_FiltersSheetNewFilters#other" = "**{count}** new filters";
+"ayu_FiltersSheetRemovedFilters#one" = "**1** removed filter";
+"ayu_FiltersSheetRemovedFilters#other" = "**{count}** removed filters";
+"ayu_FiltersSheetUpdatedFilters#one" = "**1** updated filter";
+"ayu_FiltersSheetUpdatedFilters#other" = "**{count}** updated filters";
+"ayu_FiltersSheetNewExclusions#one" = "**1** new exclusion";
+"ayu_FiltersSheetNewExclusions#other" = "**{count}** new exclusions";
+"ayu_FiltersSheetRemovedExclusions#one" = "**1** removed exclusion";
+"ayu_FiltersSheetRemovedExclusions#other" = "**{count}** removed exclusions";
+"ayu_FiltersSheetDialogsToResolve#one" = "**1** dialog to resolve";
+"ayu_FiltersSheetDialogsToResolve#other" = "**{count}** dialogs to resolve";
 "ayu_FiltersClearPopupTitle" = "Clear filters";
 "ayu_FiltersClearPopupText" = "Are you sure you want to clear all filters?";
 "ayu_FiltersClearPopupActionText" = "Clear";
@@ -5912,8 +5880,8 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_AyuForwardStatusLoadingMedia" = "Loading media";
 "ayu_AyuForwardStatusForwarding" = "Forwarding messages";
 "ayu_AyuForwardStatusFinished" = "Done";
-"ayu_AyuForwardStatusSentCount" = "sent %1$d of %2$d";
-"ayu_AyuForwardStatusChunkCount" = "chunk %1$d of %2$d";
+"ayu_AyuForwardStatusSentCount" = "sent {count1} of {count2}";
+"ayu_AyuForwardStatusChunkCount" = "chunk {count1} of {count2}";
 "ayu_JumpToBeginning" = "To Beginning";
 "ayu_ExpireMediaContextMenuText" = "Burn";
 "ayu_ExpiringVoiceMessageNote" = "This voice message can be played as many times as you want.";
