fix: process more shortcuts

--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -6108,13 +6108,14 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_DontSendOnlinePackets" = "Don't Send Online";
 "ayu_DontSendUploadProgress" = "Don't Send Typing";
 "ayu_SendOfflinePacketAfterOnline" = "Go Offline Automatically";
+"ayu_GhostModeOptionLongTapDescription" = "Long tap on any option to prevent it from changing on toggling Ghost Mode.";
 "ayu_MarkReadAfterAction" = "Read on Interact";
 "ayu_MarkReadAfterActionDescription" = "Automatically reads message when you send a new one or tap a reaction.";
 "ayu_MarkReadAfterSend" = "Send";
 "ayu_MarkReadAfterReaction" = "Reaction";
 "ayu_MarkReadAfterPoll" = "Poll";
 "ayu_UseScheduledMessages" = "Schedule Messages";
-"ayu_UseScheduledMessagesDescription" = "Automatically schedules outgoing messages for ~12 seconds, and more for media. Don't use on bad networks.";
+"ayu_UseScheduledMessagesDescription" = "Automatically schedules outgoing messages for ~12 seconds, and more for media. Sending messages this way, you won't appear online.\nDon't use on bad networks.";
 "ayu_SendWithoutSoundByDefault" = "Send without Sound";
 "ayu_SendWithoutSoundByDefaultDescription" = "Automatically sends outgoing messages without sound.";
 "ayu_SuggestGhostModeBeforeViewingStory" = "Story Ghost Mode Alert";
@@ -6146,6 +6147,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_DisableCustomBackgrounds" = "Disable Custom Backgrounds";
 "ayu_DisableNotificationsDelay" = "Disable Notify Delay";
 "ayu_LocalPremium" = "Local Telegram Premium";
+"ayu_DisplayGhostStatus" = "Display Ghost Mode Status";
 "ayu_CopyUsernameAsLink" = "Copy Username as Link";
 "ayu_CustomizationHeader" = "Customization";
 "ayu_DeletedMarkText" = "Deleted Mark";
@@ -6154,6 +6156,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_DeletedMarkCross" = "Cross";
 "ayu_DeletedMarkEyeCrossed" = "Eye Crossed";
 "ayu_EditedMarkText" = "Edited Mark";
+"ayu_ReplaceMarksWithIcons" = "Replace with Icons";
 "ayu_SemiTransparentDeletedMessages" = "Translucent Deleted Messages";
 "ayu_HideNotificationCounters" = "Hide Notification Counters";
 "ayu_HideNotificationBadge" = "Hide Notification Badge";
@@ -6224,6 +6227,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_RegexFilterQuickAdd" = "Add Filter";
 "ayu_RegexFilterBulletinText" = "Filter added to the **Shared filters**.";
 "ayu_RegexFilterBulletinAction" = "To Current Chat";
+"ayu_RegexFiltersListEmpty" = "No filters here yet.";
 "ayu_FiltersMenuSelectChat" = "Select Chat";
 "ayu_FiltersMenuImport" = "Import";
 "ayu_FiltersMenuExport" = "Export";
@@ -6302,6 +6306,10 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_DisableGhostModeTray" = "Disable Ghost Mode";
 "ayu_GhostModeEnabled" = "Ghost Mode turned on";
 "ayu_GhostModeDisabled" = "Ghost Mode turned off";
+"ayu_GhostModeGlobalSettings" = "Global Settings";
+"ayu_GhostModeGlobalSettingsDescription" = "Same for all accounts";
+"ayu_GhostModeSwitchedToGlobalSettings" = "Switched to same settings for all accounts.";
+"ayu_GhostModeSwitchedToIndividualSettings" = "Switched to individual settings for each account.";
 "ayu_StreamerModeToggle" = "Streamer Mode";
 "ayu_EnableStreamerModeTray" = "Enable Streamer Mode";
 "ayu_DisableStreamerModeTray" = "Disable Streamer Mode";
@@ -6311,6 +6319,14 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_ClearDeletedMenuText" = "Clear Deleted";
 "ayu_ViewDeletedMenuText" = "View Deleted";
 "ayu_ViewFiltersMenuText" = "View Filters";
+"ayu_ReadExclusionMenuText" = "Read Exclusion";
+"ayu_TypingExclusionMenuText" = "Typing Exclusion";
+"ayu_ExclusionTitle" = "Select exclusion type";
+"ayu_ExclusionUseDefault" = "Default";
+"ayu_ExclusionDontRead" = "Never Read";
+"ayu_ExclusionAlwaysRead" = "Always Read";
+"ayu_ExclusionDontType" = "Never Type";
+"ayu_ExclusionAlwaysType" = "Always Type";
 "ayu_PeekOnlineSuccess" = "Peeked via";
 "ayu_OneViewTTL" = "one view";
 "ayu_OnePlayTTL" = "one play";
@@ -6327,9 +6343,15 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_SuggestGhostModeStoryText" = "Do you want to enable **Ghost Mode** before viewing the story?";
 "ayu_SuggestGhostModeStoryActionTextYes" = "Yes";
 "ayu_SuggestGhostModeStoryActionTextNo" = "No";
+"ayu_ClearAttachmentsFolderWarning" = "Are you sure you want to clear the **attachments folder**? This action cannot be undone.";
+"ayu_ClearMessagesDatabaseWarning" = "Are you sure you want to clear **all deleted & edited messages**? This action cannot be undone.";
+"ayu_ClearTelegramDatabaseWarning" = "Are you sure you want to clear the **Telegram internal database**? This action cannot be undone.";
+"ayu_FirstLaunchAlert" = "AyuGram is **free** software and should only be obtained from our **official sources**. You assume **full responsibility** for using this application with your account.";
+"ayu_LocalPremiumAlert" = "With local Telegram Premium you won't have increased limits and won't be able to send animated emojis. Other users won't see your premium emoji and quote color.";
+"ayu_ExteraChatsAlert" = "Don't ask questions related to **AyuGram** in **exteraGram** chats. If you need help, ask in the official **AyuGram** chat.";
 "ayu_HideNextViewsDescriptionAyu" = "Hide my views forever, until Ghost Mode disabled.";
 "ayu_EnableGhostModeStories" = "Enable Ghost Mode";
-"ayu_GhostModeIsActive" = "Ghost Mode Is Active";
+"ayu_GhostModeIsActive" = "Ghost Mode is Active";
 "ayu_SimpleQuotesAndReplies" = "Disable Colorful Replies";
 "ayu_DisableSimilarChannels" = "Disable Similar Channels";
 "ayu_CollapseSimilarChannels" = "Collapse Similar Channels";
@@ -6376,7 +6398,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "ayu_ContextHideMessage" = "Hide";
 "ayu_ContextCopyCallbackData" = "Copy Callback Data";
 "ayu_RegisterURLScheme" = "Register URL Scheme";
-"ayu_LocalPremiumNotice" = "You're using **local** Telegram Premium.\nIt **won't** give you any benefits, except translator.\n**Enjoy the star near your nickname!**";
+"ayu_LocalPremiumNotice" = "You're using **local** Telegram Premium.\nIt **won't** give you any benefits.\n**Enjoy the star near your nickname!**";
 "ayu_SettingsWatermark" = "AyuGram developed and maintained by Radolyn Labs.";
 "ayu_ConfirmationSticker" = "Do you want to send this sticker?";
 "ayu_ConfirmationGIF" = "Do you want to send this GIF?";
